--- a/BAccurate/BAccurate.csproj
+++ b/BAccurate/BAccurate.csproj
@@ -45,10 +45,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AppServices\IAuthAppService.cs" />
     <Compile Include="AppServices\IS_StaffinfoAppService.cs" />
     <Compile Include="AppServices\ITestService.cs" />
     <Compile Include="BAccurateConfig.cs" />
+    <Compile Include="Domain\IReadAuthRepository.cs" />
+    <Compile Include="Domain\ITokenRepository.cs" />
+    <Compile Include="Domain\IOnlineUserMgr.cs" />
+    <Compile Include="Domain\IUserEntity.cs" />
+    <Compile Include="Domain\TokenEntity.cs" />
+    <Compile Include="Models\Auth\LoginInfo.cs" />
+    <Compile Include="Models\Auth\LoginResultInfo.cs" />
+    <Compile Include="Models\Auth\UserAuthOption.cs" />
     <Compile Include="Models\BaseQuery.cs" />
+    <Compile Include="Models\RequestClientInfo.cs" />
     <Compile Include="Models\S_Staffinfo\S_StaffinfoInfo.cs" />
     <Compile Include="Models\S_Staffinfo\S_StaffinfoQuery.cs" />
     <Compile Include="Models\Test\QueryTest.cs" />
