1. 实现用户、权限、角色等基础信息CRUD相关接口 2. 实现AuthAppService相关方法。
Signed-off-by: kxhaibin@163.com <kxhaibin@163.com>

--- a/BAccurate.Repository.Freesql/BAccurate.Repository.Freesql.csproj
+++ b/BAccurate.Repository.Freesql/BAccurate.Repository.Freesql.csproj
@@ -66,7 +66,12 @@
     <Compile Include="BAccurateContext.cs" />
     <Compile Include="BAccurateDbContext.cs" />
     <Compile Include="Entities\BaseEntity.cs" />
+    <Compile Include="Entities\ResourceEntity.cs" />
+    <Compile Include="Entities\RoleEntity.cs" />
+    <Compile Include="Entities\RoleResourceRelationEntity.cs" />
     <Compile Include="Entities\S_StaffinfoEntity.cs" />
+    <Compile Include="Entities\UserEntity.cs" />
+    <Compile Include="Entities\UserRoleRelationEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
