--- a/BAccurate.WebApi/BAccurate.WebApi.csproj
+++ b/BAccurate.WebApi/BAccurate.WebApi.csproj
@@ -114,7 +114,10 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AuthController.cs" />
     <Compile Include="Controllers\BaseController.cs" />
+    <Compile Include="Controllers\ResourceController.cs" />
+    <Compile Include="Controllers\RoleController.cs" />
     <Compile Include="Controllers\S_StaffinfoController.cs" />
+    <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Extends\LongToString.cs" />
     <Compile Include="Extends\UAParser.cs" />
     <Compile Include="Framework\DtoMapper.cs" />
