--- a/BAccurate.AppService.Implement/BAccurate.AppService.Implement.csproj
+++ b/BAccurate.AppService.Implement/BAccurate.AppService.Implement.csproj
@@ -59,7 +59,10 @@
   <ItemGroup>
     <Compile Include="AuthAppService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResourceService.cs" />
+    <Compile Include="RoleService.cs" />
     <Compile Include="S_StaffinfoService.cs" />
+    <Compile Include="UserService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BAccurate.Implement\BAccurate.Implement.csproj">
