1. 实现基础数据接口的单元测试 2. 实现业务依赖数据接口的实现（RoleAndRes, ReadAuth etc )
Signed-off-by: kxhaibin@163.com <kxhaibin@163.com>

--- a/BAccurate.Repository.Freesql/BAccurate.Repository.Freesql.csproj
+++ b/BAccurate.Repository.Freesql/BAccurate.Repository.Freesql.csproj
@@ -62,6 +62,7 @@
   <ItemGroup>
     <Compile Include="Auth\Entities\TokendbEntity.cs" />
     <Compile Include="Auth\ReadAuthRepository.cs" />
+    <Compile Include="Auth\RoleAndResDependRepository.cs" />
     <Compile Include="Auth\TokenRepository.cs" />
     <Compile Include="BAccurateContext.cs" />
     <Compile Include="BAccurateDbContext.cs" />
