--- a/BAccurate.Repository.Freesql/BAccurate.Repository.Freesql.csproj
+++ b/BAccurate.Repository.Freesql/BAccurate.Repository.Freesql.csproj
@@ -31,14 +31,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="FreeSql, Version=0.11.20.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\FreeSql.0.11.20\lib\net45\FreeSql.dll</HintPath>
+    <Reference Include="FreeSql, Version=1.3.6.0, Culture=neutral, PublicKeyToken=a33928e5d4a4b39c, processorArchitecture=MSIL">
+      <HintPath>..\packages\FreeSql.1.3.6\lib\net45\FreeSql.dll</HintPath>
     </Reference>
-    <Reference Include="FreeSql.DbContext, Version=0.11.20.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\FreeSql.DbContext.0.11.20\lib\net45\FreeSql.DbContext.dll</HintPath>
+    <Reference Include="FreeSql.DbContext, Version=1.3.6.0, Culture=neutral, PublicKeyToken=d6971b25f8f033dc, processorArchitecture=MSIL">
+      <HintPath>..\packages\FreeSql.DbContext.1.3.6\lib\net45\FreeSql.DbContext.dll</HintPath>
     </Reference>
-    <Reference Include="FreeSql.Provider.SqlServer, Version=0.11.20.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\FreeSql.Provider.SqlServer.0.11.20\lib\net45\FreeSql.Provider.SqlServer.dll</HintPath>
+    <Reference Include="FreeSql.Provider.SqlServer, Version=1.3.6.0, Culture=neutral, PublicKeyToken=d313b98af285bd88, processorArchitecture=MSIL">
+      <HintPath>..\packages\FreeSql.Provider.SqlServer.1.3.6\lib\net45\FreeSql.Provider.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="SafeObjectPool, Version=2.1.6.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\SafeObjectPool.2.1.6\lib\net45\SafeObjectPool.dll</HintPath>
@@ -62,14 +62,21 @@
   <ItemGroup>
     <Compile Include="Auth\Entities\TokendbEntity.cs" />
     <Compile Include="Auth\ReadAuthRepository.cs" />
+    <Compile Include="Auth\RoleAndResDependRepository.cs" />
     <Compile Include="Auth\TokenRepository.cs" />
     <Compile Include="BAccurateContext.cs" />
     <Compile Include="BAccurateDbContext.cs" />
     <Compile Include="Entities\BaseEntity.cs" />
+    <Compile Include="Entities\ResourceEntity.cs" />
+    <Compile Include="Entities\RoleEntity.cs" />
+    <Compile Include="Entities\RoleResourceRelationEntity.cs" />
     <Compile Include="Entities\S_StaffinfoEntity.cs" />
+    <Compile Include="Entities\UserEntity.cs" />
+    <Compile Include="Entities\UserRoleRelationEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
