--- a/BAccurate.WebApi/Web.config
+++ b/BAccurate.WebApi/Web.config
@@ -5,9 +5,12 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="accConn" connectionString="server=192.168.2.206;database=KJ912_PLS;uid=sa;pwd=fm2017;Pooling=true;Max Pool Size=3;Min Pool Size=0;" />
+    <add name="ocmConn" connectionString="Data Source=|DataDirectory|\ocm.db; Pooling=true;Min Pool Size=3;" />
   </connectionStrings>
-  <appSettings></appSettings>
+  <appSettings>
+    <!--dbType: mysql mssql sqlite-->
+    <add key="dbType" value="sqlite" />
+  </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
@@ -50,6 +53,10 @@
         <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-5.2.4.0" newVersion="5.2.4.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="FreeSql" publicKeyToken="a33928e5d4a4b39c" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.3.6.0" newVersion="1.3.6.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.codedom>
@@ -58,4 +65,9 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-</configuration>
+<system.data>
+    <DbProviderFactories>
+      <remove invariant="MySql.Data.MySqlClient" />
+      <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.12.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
+    </DbProviderFactories>
+  </system.data></configuration>
