--- a/BAccurate.WebApi/packages.config
+++ b/BAccurate.WebApi/packages.config
@@ -3,9 +3,11 @@
   <package id="Autofac" version="4.9.4" targetFramework="net45" />
   <package id="Autofac.WebApi2" version="4.3.1" targetFramework="net45" />
   <package id="AutoMapper" version="7.0.1" targetFramework="net45" />
-  <package id="FreeSql" version="0.11.20" targetFramework="net45" />
-  <package id="FreeSql.DbContext" version="0.11.20" targetFramework="net45" />
-  <package id="FreeSql.Provider.SqlServer" version="0.11.20" targetFramework="net45" />
+  <package id="FreeSql" version="1.3.6" targetFramework="net45" />
+  <package id="FreeSql.DbContext" version="1.3.6" targetFramework="net45" />
+  <package id="FreeSql.Provider.MySql" version="1.3.6" targetFramework="net45" />
+  <package id="FreeSql.Provider.Sqlite" version="1.3.6" targetFramework="net45" />
+  <package id="FreeSql.Provider.SqlServer" version="1.3.6" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.4" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.4" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client.zh-Hans" version="5.2.4" targetFramework="net45" />
@@ -14,8 +16,10 @@
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.4" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost.zh-Hans" version="5.2.4" targetFramework="net45" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net45" />
+  <package id="MySql.Data" version="6.9.12" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net45" />
   <package id="SafeObjectPool" version="2.1.6" targetFramework="net45" />
   <package id="SAM.Framework" version="1.0.0-alpha" targetFramework="net45" />
+  <package id="System.Data.SQLite.Core" version="1.0.112.0" targetFramework="net45" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net45" />
 </packages>
