--- a/BAccurate/BAccurate.csproj
+++ b/BAccurate/BAccurate.csproj
@@ -46,20 +46,37 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppServices\IAuthAppService.cs" />
+    <Compile Include="AppServices\IResourceAppService.cs" />
+    <Compile Include="AppServices\IRoleAppService.cs" />
     <Compile Include="AppServices\IS_StaffinfoAppService.cs" />
+    <Compile Include="AppServices\IUserAppService.cs" />
     <Compile Include="BAccurateConfig.cs" />
     <Compile Include="Domain\IReadAuthRepository.cs" />
+    <Compile Include="Domain\IRoleAndResDepend.cs" />
     <Compile Include="Domain\ITokenRepository.cs" />
     <Compile Include="Domain\IOnlineUserMgr.cs" />
     <Compile Include="Domain\IUserEntity.cs" />
     <Compile Include="Domain\TokenEntity.cs" />
+    <Compile Include="Enums\AccountType.cs" />
+    <Compile Include="Enums\ResourceType.cs" />
+    <Compile Include="Models\Auth\IdentityInfo.cs" />
     <Compile Include="Models\Auth\LoginInfo.cs" />
     <Compile Include="Models\Auth\LoginResultInfo.cs" />
+    <Compile Include="Models\Auth\MenuInfo.cs" />
+    <Compile Include="Models\Auth\ResourceInfo.cs" />
     <Compile Include="Models\Auth\UserAuthOption.cs" />
     <Compile Include="Models\BaseQuery.cs" />
     <Compile Include="Models\RequestClientInfo.cs" />
+    <Compile Include="Models\Resource\ResourceInfo.cs" />
+    <Compile Include="Models\Role\RoleDetailInfo.cs" />
+    <Compile Include="Models\Role\RoleInfo.cs" />
+    <Compile Include="Models\Role\RoleParam.cs" />
     <Compile Include="Models\S_Staffinfo\S_StaffinfoInfo.cs" />
     <Compile Include="Models\S_Staffinfo\S_StaffinfoQuery.cs" />
+    <Compile Include="Models\User\UserDetailInfo.cs" />
+    <Compile Include="Models\User\UserParam.cs" />
+    <Compile Include="Models\User\UserInfo.cs" />
+    <Compile Include="OcmStatusCode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
