--- a/ConsoleWebApi/packages.config
+++ b/ConsoleWebApi/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Autofac" version="3.5.0" targetFramework="net45" />
   <package id="Autofac.Owin" version="4.2.0" targetFramework="net45" />
+  <package id="Autofac.SignalR2" version="4.0.0" targetFramework="net45" />
   <package id="Autofac.WebApi2" version="3.4.0" targetFramework="net45" />
   <package id="Autofac.WebApi2.Owin" version="4.0.0" targetFramework="net45" />
   <package id="AutoMapper" version="7.0.1" targetFramework="net45" />
@@ -11,6 +12,9 @@
   <package id="FreeSql.Provider.Sqlite" version="1.3.6" targetFramework="net45" />
   <package id="FreeSql.Provider.SqlServer" version="1.3.6" targetFramework="net45" />
   <package id="FreeSql.Repository" version="1.3.6" targetFramework="net45" />
+  <package id="jQuery" version="1.6.4" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="2.1.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Owin" version="1.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.0" targetFramework="net45" />
@@ -19,6 +23,7 @@
   <package id="Microsoft.Owin.FileSystems" version="4.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.HttpListener" version="4.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Hosting" version="4.1.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security" version="2.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.SelfHost" version="4.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.StaticFiles" version="4.1.0" targetFramework="net45" />
   <package id="MySql.Data" version="6.9.12" targetFramework="net45" />
