--- a/ConsoleWebApi/packages.config
+++ b/ConsoleWebApi/packages.config
@@ -13,17 +13,19 @@
   <package id="FreeSql.Provider.SqlServer" version="1.3.6" targetFramework="net45" />
   <package id="FreeSql.Repository" version="1.3.6" targetFramework="net45" />
   <package id="jQuery" version="1.6.4" targetFramework="net45" />
-  <package id="Microsoft.AspNet.SignalR.Core" version="2.1.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Cors" version="5.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="2.4.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.SignalR.Owin" version="1.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.0" targetFramework="net45" />
   <package id="Microsoft.Owin" version="4.1.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Cors" version="4.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Diagnostics" version="4.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.FileSystems" version="4.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.HttpListener" version="4.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Hosting" version="4.1.0" targetFramework="net45" />
-  <package id="Microsoft.Owin.Security" version="2.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.SelfHost" version="4.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.StaticFiles" version="4.1.0" targetFramework="net45" />
   <package id="MySql.Data" version="6.9.12" targetFramework="net45" />
