1. 实现owin的测试 2. 更新view相关功能
Signed-off-by: kxhaibin@163.com <kxhaibin@163.com>

--- a/ConsoleWebApi/ConsoleWebApi.csproj
+++ b/ConsoleWebApi/ConsoleWebApi.csproj
@@ -165,6 +165,9 @@
   <ItemGroup>
     <None Include="App.config" />
     <EmbeddedResource Include="Extends\ua-regexes.yaml" />
+    <None Include="ocm.db">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
